syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/aalug/blog-go/pb";

message User {
    string email = 1;
    string username = 2;
    google.protobuf.Timestamp password_changed_at = 3;
    google.protobuf.Timestamp created_at = 4;
}